--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:dev": "webpack-dev-server",
     "clean": "rm -rf ./dist",
     "prebuild": "npm run clean",
-    "build": "webpack --mode production"
+    "build": "webpack --mode development"
   },
   "repository": {
     "type": "git",
@@ -40,6 +40,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.6.1",
+    "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.1.0",
     "html-loader": "^0.5.5",
